# house-pricing-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  train.py
src/: app.py  constants.py  models.py
src/services/: __init__.py  dao.py  inference.py
tests/: test_app.py
tests/services/: test_dao.py  test_inference.py
