[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["clementw168 <clementwang2001@gmail.com>"]
description = ""
license = "MIT"
name = "house-pricing-api"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.109.0"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.2.0"
python = "^3.11"
requests = "2.28.1"
scikit-learn = "^1.3.2"
uvicorn = {extras = ["standard"], version = "^0.27.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipykernel = "^6.26.0"
isort = "^5.12.0"
pytest = "^7.4.4"
ruff = "^0.1.6"
toml-sort = "^0.23.1"
tqdm = "^4.66.1"
httpx = "^0.26.0"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
indent-width = 4
line-length = 88
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
